# agent-ready

./: .gitignore  AGENTS.md  AGENT_PICKUP.md  CAPABILITY_REGISTRY.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOW.md  README.md  SECURITY.md  pyproject.toml
.git-hooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  capability-gap.yml
.github/workflows/: ci.yml
.opencode/: AGENT_PROMPT.md  rules.md
agent_ready/: __init__.py  cli.py  executor.py  mapper.py  mcp_server.py  models.py  plan.py  registry.py  sandbox.py
agent_ready/adapters/: __init__.py  patterns.py  text.py  trace_eval.py
agent_ready/capabilities/: __init__.py  generic.py  vercel_cli.py
docs/: AGENT_INTERFACE.md  ARCHITECTURE.md  EXAMPLES.md  INTEGRATION.md  ROADMAP.md  SECURITY_REVIEW.md
schema/: README.md  capabilities.v1.json  capability.v1.json  error-patterns.v1.json  trace.v1.json
tests/: test_adapters.py  test_capability_vercel.py  test_cli.py  test_cli_autodetect.py  test_generic_executor.py  test_mapper.py  test_mcp_server.py  test_plan_rendering.py  test_registry.py
tests/fixtures/: README.md  diagnose_clean.json  diagnose_multi.json  diagnose_vercel_missing.json  trace_eval_scorecard_real.json  trace_eval_scorecard_synthetic.json
