[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-ready"
version = "0.3.0"
description = "Detect what your AI agent is missing. Install it. Get ready."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mcp>=1.12"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
agent-ready = "agent_ready.cli:main"
agent-ready-mcp = "agent_ready.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_ready"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
